--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -4,6 +4,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content >
+  <div class="row h-100 justify-content-center align-items-center">
+<div expand="full">  
+  <ion-button class="boton" color="primary" size="large" routerLink="/tipeofingress">Ingreso</ion-button>
+</div>
+<div expand="full">
+  <ion-button class="boton" color="dark" size="large">Egreso</ion-button>
+</div>
+</div>
 </ion-content>
