--- a/src/app/ingreso/dniserch/dniserch.page.html
+++ b/src/app/ingreso/dniserch/dniserch.page.html
@@ -1,9 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>dniserch</ion-title>
+    <ion-title>Ingreso</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="row h-100 justify-content-center align-items-center">
+  <div>
+    <h2>Porfavor ingrese el documento</h2>
+    <ion-item>
+      <ion-select placeholder="DNI" value="dni" okText="Seleccionar">DNI
+        <ion-select-option  value="DNI">DNI</ion-select-option>
+      </ion-select>
+      <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
+    </ion-item>
+  </div>
+</div>
 </ion-content>
