login page modificated

--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content>
-    <img [src]="image" class="img-fluid" alt="Responsive image">
-    <div class="card text-center" style="width: 18rem;">
+    <img [src]="image" class="img-fluid mt-4" alt="Responsive image">
+    <div class="card mx-auto text-center mt-3" style="width: 18rem;">
         <div class="card-body">
             <form>
                 <div class="form-group">
