--- a/src/app/ingreso/dniserch/dniserch.page.html
+++ b/src/app/ingreso/dniserch/dniserch.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+  
   <div class="row h-100 justify-content-center align-items-center">
   <div>
     <h2>Porfavor ingrese el documento</h2>
@@ -16,4 +17,8 @@
     </ion-item>
   </div>
 </div>
+  <div class="fondo">
+    <ion-button color="success" >Aceptar</ion-button>
+  </div>
+
 </ion-content>
