--- a/src/app/security/signin/signin.page.html
+++ b/src/app/security/signin/signin.page.html
@@ -4,7 +4,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content style="padding-top:15px;">
     <div class="card text-center">
         <div class="card-body">
             <h4 class="card-title">Regístrate</h4>
