--- a/src/app/ingreso/tipeofvisit/tipeofvisit.page.html
+++ b/src/app/ingreso/tipeofvisit/tipeofvisit.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tipeofvisit</ion-title>
+    <ion-title class="text-center">tipeofvisit</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <div class="row h-100 justify-content-center align-items-center">
+        <div><h2>Seleccione la opcion</h2></div>  
+      <div expand="full">  
+          <ion-button class="boton" color="primary" size="large" routerLink="/transport">Visita</ion-button>
+        </div>
+        <div expand="full">
+          <ion-button class="boton" color="dark" size="large">Servicio</ion-button>
+        </div>
+        </div>
 </ion-content>
