--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>startmenu</ion-title>
-    </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
     <div class="row h-100 justify-content-center align-items-center">
