Type of ingress added

--- a/src/app/ingreso/dniserch/dniserch.page.html
+++ b/src/app/ingreso/dniserch/dniserch.page.html
@@ -18,7 +18,7 @@
   </div>
 </div>
   <div class="fondo">
-    <ion-button color="success" >Aceptar</ion-button>
+    <ion-button color="success" routerLink="/destination">Aceptar</ion-button>
   </div>
 
 </ion-content>
