--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+    
+</app-header>
 
 <ion-content>
     <div class="row h-100 justify-content-center align-items-center">
