type of ingress corrected

--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -5,7 +5,7 @@
 <ion-content>
     <div class="row h-100 justify-content-center align-items-center">
         <div expand="full">
-            <button type="button" class="btn btn-primary btn-lg btn-block mr-1" routerLink="/tipeofingress"><i class="fas fa-sign-in-alt mr-1"></i>Ingreso</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block mr-1" routerLink="/typeofingress"><i class="fas fa-sign-in-alt mr-1"></i>Ingreso</button>
             <!-- <ion-button class="boton" color="primary" routerLink="/tipeofingress"><i class="fas fa-sign-in-alt mr-1"></i>Ingreso</ion-button> -->
         </div>
         <div expand="full">
