dni search added, dniserch deleted

--- a/src/app/ingreso/typeofingress/typeofingress.page.html
+++ b/src/app/ingreso/typeofingress/typeofingress.page.html
@@ -13,7 +13,7 @@
             </ion-button>
         </ion-col>
         <ion-col>
-            <ion-button expand="full" size="large" routerLink="/dniserch">
+            <ion-button expand="full" size="large" routerLink="/dnisearch">
                 <ion-label><i class="fas fa-keyboard mr-1"></i>Ingreso <br> Manual</ion-label>
             </ion-button>
         </ion-col>
