--- a/src/app/ingreso/destination/destination.page.html
+++ b/src/app/ingreso/destination/destination.page.html
@@ -19,6 +19,7 @@
       
       <ion-input type="text" placeholder="Ingrese lote o apellido"></ion-input>
     </ion-item>
+    <ion-button class="ion-justify-content-end" routerLink="/tipeofvisit">Siguiente</ion-button>
   </div>
 </div>
 </ion-content>
