--- a/src/app/ingreso/typeofingress/typeofingress.page.html
+++ b/src/app/ingreso/typeofingress/typeofingress.page.html
@@ -1,6 +1,9 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>typeofingress</ion-title>
+        <ion-buttons slot="start">
+          <ion-back-button defaultHref='/'></ion-back-button>
+        </ion-buttons>
+        <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -8,13 +11,13 @@
 
     <ion-row class="row h-100 justify-content-center align-items-center">
         <ion-col>
-            <ion-button expand="full" size="large" routerLink="/qringress">
-                <ion-label><i class="fas fa-qrcode mr-1"></i>Ingreso Rapido</ion-label>
+            <ion-button size="large" routerLink="/qringress">
+                <ion-label><i class="fas fa-qrcode mr-1"></i>  Ingreso <br> Rapido</ion-label>
             </ion-button>
         </ion-col>
         <ion-col>
-            <ion-button expand="full" size="large" routerLink="/dniserch">
-                <ion-label><i class="fas fa-keyboard mr-1"></i>Ingreso <br> Manual</ion-label>
+            <ion-button size="large" routerLink="/dniserch">
+                <ion-label><i class="fas fa-keyboard mr-1 "></i>  Ingreso <br> Manual</ion-label>
             </ion-button>
         </ion-col>
     </ion-row>
