--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -1,3 +1,12 @@
+<ion-header>
+        <ion-toolbar>
+          <ion-title text-capitalize>IngresAr</ion-title>
+          <ion-buttons slot="start">
+            <ion-menu-button menu="primerMenu" disable="true"></ion-menu-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+
 <ion-content>
     <img [src]="image" class="img-fluid mt-4" alt="Responsive image">
     <div class="card mx-auto text-center mt-3" style="width: 18rem;">
