--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,6 +1,11 @@
-<app-header>
-    
-</app-header>
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/login'></ion-back-button>
+        </ion-buttons>
+        <ion-title text-capitalize>IngresAr</ion-title>
+    </ion-toolbar>
+</ion-header>
 
 <ion-content>
     <div class="row h-100 justify-content-center align-items-center">
