--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,17 +10,33 @@
     <ion-list>
       <ion-menu-toggle>
         <ion-item>
-          <ion-icon slot="start" name="person"></ion-icon>
-          <ion-label>Perfil</ion-label>
+          <ion-icon slot="start" name="people"></ion-icon>
+          <ion-label>Personas dento del establecimiento</ion-label>
         </ion-item>
         <ion-item>
           <ion-icon slot="start" name="chatbubbles"></ion-icon>
           <ion-label>Mensajes</ion-label>
         </ion-item>
         <ion-item>
-          <ion-icon slot="start" name="settings"></ion-icon>
-          <ion-label>Configuracion</ion-label>
-        </ion-item>          
+          <ion-icon slot="start" name="book"></ion-icon>
+          <ion-label>Generar novedaes</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="paper"></ion-icon>
+          <ion-label>Parte diario</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="swap"></ion-icon>
+          <ion-label>Historial Ingreso/Egreso</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="clipboard"></ion-icon>
+          <ion-label>Consultar evento</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon slot="start" name="close"></ion-icon>
+          <ion-label>Cerrar sesion</ion-label>
+        </ion-item>                  
       </ion-menu-toggle>
     </ion-list>
   </ion-content>
