--- a/src/app/ingreso/typeofvisit/typeofvisit.page.html
+++ b/src/app/ingreso/typeofvisit/typeofvisit.page.html
@@ -7,7 +7,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
     <div>
         <div class="text-center" style="margin-top: 20px;">
             <h2>¿Que viene a hacer?</h2>
@@ -18,14 +18,26 @@
                 <h2>Seleccione la opcion</h2>
             </div>
         </div>
-        <div class="row h-100 justify-content-center align-items-center">
+        <!-- <div class="row h-100 justify-content-center align-items-center">
             <div expand="full">
                 <ion-button class="boton" color="primary" size="large" routerLink="/transport">Visita</ion-button>
             </div>
             <div expand="full">
                 <ion-button class="boton" color="dark" size="large">Servicio</ion-button>
             </div>
-        </div>
+        </div> -->
+        <ion-row class="row h-100 justify-content-center align-items-center">
+            <ion-col>
+                <ion-button expand="full" size="large" routerLink="/transport">
+                    <ion-label><i class="fas fa-user-alt"></i>Visita</ion-label>
+                </ion-button>
+            </ion-col>
+            <ion-col>
+                <ion-button expand= "full" size="large" routerLink="/servicio">
+                    <ion-label><i class="fas fa-tools"></i>Servicio</ion-label>
+                </ion-button>
+            </ion-col>
+        </ion-row>
     </div>
 
 </ion-content>
