--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,9 +1,10 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button defaultHref='/login'></ion-back-button>
-        </ion-buttons>
         <ion-title text-capitalize>IngresAr</ion-title>
+        <ion-buttons slot="start">
+            <ion-menu-button menu="primerMenu" disable="true"></ion-menu-button>
+          </ion-buttons>
+        
     </ion-toolbar>
 </ion-header>
 
