--- a/src/app/ingreso/servicio/servicio.page.html
+++ b/src/app/ingreso/servicio/servicio.page.html
@@ -5,5 +5,19 @@
 </ion-header>
 
 <ion-content>
+<h2>Complete los datos requeridos</h2>
+<ion-col>
+  <ion-row class="row h-100 justify-content-center align-items-center">
+  <ion-row class="center">
+    <h3>Empresa de Servicio</h3>
+  </ion-row>
+  <ion-row >
+    <ion-select placeholder="seleccionEmpresa" value="seleccionEmpresa" okText="seleccionEmpresa">Selecciona una Empresa
+      <ion-select-option *ngFor="let item of empresa">{{item.nombre}}</ion-select-option>
+    </ion-select>
+    <ion-button>Agregar Empresa</ion-button>
+  </ion-row>
 
+</ion-row>
+</ion-col>
 </ion-content>
