css service changes

--- a/src/app/ingreso/servicio/servicio.page.html
+++ b/src/app/ingreso/servicio/servicio.page.html
@@ -1,15 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>servicio</ion-title>
- 
-  </ion-toolbar>
-<style>
-.hola {
-    position: relative;
-    margin-top: 100%;
-    margin-left:100%;
-}
-</style>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+           <ion-back-button defaultHref='/dnisearch'></ion-back-button>
+        </ion-buttons>
+        <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <!--<ion-content>
