new vechicle changes

--- a/src/app/ingreso/newvehicle/newvehicle.page.html
+++ b/src/app/ingreso/newvehicle/newvehicle.page.html
@@ -1,50 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>newvehicle</ion-title>
+      <ion-buttons slot="start">
+         <ion-back-button defaultHref='/typeofvisit'></ion-back-button>
+      </ion-buttons>
+      <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
   </ion-toolbar>
-  <style>
-  @media (min-width: 100px) {
-    
-    h2 {
-      text-align: center;
-} 
-    h6 {
-      padding-left: 30px;
-      padding-top: 20px;
-    }
-    ion-row {
-      padding-left: 10px;
-    }
-    ion-button{
-      padding-top: 20px;
-    }
-    .boton {
-     position: relative;
-      margin-left: 70%;
-      padding-top: 10%;
-     
-    }
-}
- @media (max-width: 1000px) {
-    
-      h2 {
-        text-align: center;
-  }
-      h6 {
-        padding-left: 30px;
-      padding-top: 20px;
-  }
-  ion-row {
-      padding-left: 10px;
-    }
-    ion-button{
-      padding-top: 20px;
-    }
-    
-}
- 
-  </style>
 </ion-header>
+
 
 <ion-content>
     <h2>Informacion del Vehiculo</h2>
@@ -54,13 +16,11 @@
             <ion-input placeholder="ingrese dominio"></ion-input>
           </ion-item>
     </ion-row> 
-           
     <h6>Tipo Vehiculo*</h6>
     <ion-row>
         <ion-item>
             <select class="form-control" id="sel1">
                 <option  *ngFor="let item of tipo">{{item.nombre}}</option>
-                
               </select>
           </ion-item>
     </ion-row> 
@@ -69,7 +29,6 @@
         <ion-item>
             <select class="form-control" id="sel1">
                 <option  *ngFor="let item of marca">{{item.nombre}}</option>
-                
               </select>
           </ion-item>
     </ion-row> 
@@ -91,10 +50,7 @@
           </ion-item>
           
     </ion-row> 
-
-        <div class="boton">
-            <ion-button color="primary" >Aceptar</ion-button>
-          </div>
+    <ion-button color="primary" routerLink="/authorization" routerLinkActive="router-link-active" >Aceptar</ion-button>
           
     
 </ion-content>
