--- a/src/app/ingreso/newcompany/newcompany.page.html
+++ b/src/app/ingreso/newcompany/newcompany.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>newcompany</ion-title>
+      <ion-buttons slot="start">
+         <ion-back-button defaultHref='/dnisearch'></ion-back-button>
+      </ion-buttons>
+      <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
   </ion-toolbar>
 </ion-header>
 
