--- a/src/app/ingreso/servicio/servicio.page.html
+++ b/src/app/ingreso/servicio/servicio.page.html
@@ -45,7 +45,7 @@
           <div class="container-fluid h-100">
               <div class="row w-100">
                 <div class="col">
-                  <button type="button" class="btn btn-primary" [routerLink]="['/routePath']" > Agregar Nueva Empresa </button>
+                  <button type="button" class="btn btn-primary" [routerLink]="['/newcompany']" > Agregar Nueva Empresa </button>
                 </div>
               </div>
           <div class="container-fluid h-100">
