--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -9,13 +9,16 @@
 </ion-header>
 
 <ion-content>
-    <div class="row h-100 justify-content-center align-items-center">
+    <div class="row mt-3 justify-content-center align-items-center">
+        <img [src]="image"  height="100px">
+    </div>
+    <div class="row h-75 justify-content-center align-items-center">
         <div expand="full">
             <button type="button" class="btn btn-primary btn-lg btn-block mr-1" routerLink="/typeofingress"><i class="fas fa-sign-in-alt mr-1"></i>Ingreso</button>
             <!-- <ion-button class="boton" color="primary" routerLink="/tipeofingress"><i class="fas fa-sign-in-alt mr-1"></i>Ingreso</ion-button> -->
         </div>
         <div expand="full">
-            <button type="button" class="btn btn-secondary btn-lg btn-block ml-1"><i class="fas fa-sign-out-alt mr-1"></i> Egreso</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block ml-1" routerLink="/egress"><i class="fas fa-sign-out-alt mr-1"></i> Egreso</button>
         </div>
     </div>
 </ion-content>
