--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -13,10 +13,8 @@
     <h3>¿Quien autoriza el ingreso?</h3>
     <ion-list>
         <ion-item>
-            <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar">
-                <ion-select-option value="1">Jose</ion-select-option>
-                <ion-select-option value="2">Pedro</ion-select-option>
-                <ion-select-option value="3">Daniel</ion-select-option>
+            <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="i">
+                    <ion-select-option [value]=p.nombre *ngFor="let p of persona; let i = index"> {{p.nombre}}</ion-select-option>
             </ion-select>
         </ion-item>
     </ion-list>
@@ -28,8 +26,8 @@
         <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
             <ion-select-option value="DNI">DNI</ion-select-option>
         </ion-select>
-    <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
-    <ion-icon name="add" color="black" (click)="mostrar()"></ion-icon>
+    <ion-input type="text" placeholder="Ingrese DNI"  [(ngModel)]="dni"></ion-input>
+    <ion-icon name="add" color="black"></ion-icon>
     </ion-item>
 </ion-row>
 
@@ -37,6 +35,7 @@
 </ion-content>
 
 <ion-footer no-border>
+    <ion-button color="tertiary" (click)="imprimir()">Imprimir</ion-button>
     <ion-button routerLink="/startmenu">
         Procesar Ingreso
     </ion-button>
