--- a/src/app/ingreso/dnisearch/dnisearch.page.html
+++ b/src/app/ingreso/dnisearch/dnisearch.page.html
@@ -33,6 +33,8 @@
         <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
         </ion-item>
     </ion-row>
-    <ion-button class="mt-4 ion-align-self-end" routerLink="/destination">Aceptar</ion-button>
+    <div style="text-align-last: right">
+        <ion-button  class="mt-4 ion-align-self-end" routerLink="/destination">Aceptar</ion-button>
+    </div>
 
 </ion-content>
