--- a/src/app/ingreso/destination/destination.page.html
+++ b/src/app/ingreso/destination/destination.page.html
@@ -22,7 +22,9 @@
       
       <ion-input type="text" placeholder="Ingrese lote o apellido"></ion-input>
     </ion-item>
-    <ion-button class="ion-justify-content-end" routerLink="/typeofvisit">Siguiente</ion-button>
+    <div style="text-align-last: right">
+      <ion-button class="mt-4" routerLink="/typeofvisit">Siguiente</ion-button>
+    </div>
   </div>
 </div>
 </ion-content>
