--- a/src/app/ingreso/transport/transport.page.html
+++ b/src/app/ingreso/transport/transport.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="vertical-align: -webkit-baseline-middle">
 <form #f="ngForm">
   <ion-list>
     <ion-radio-group>
@@ -22,8 +22,8 @@
 <div>
   <ion-button size="small" fill="clear" color="dark" strong="true">Agregar Vehiculo</ion-button>
 </div>
-<div>
-  <ion-button class="align-self-end" routerLink="/authorization">Aceptar</ion-button>
+<div style="text-align-last: right">
+  <ion-button routerLink="/authorization">Aceptar</ion-button>
 </div>
 
 
