--- a/src/app/egreso/egress/egress.page.html
+++ b/src/app/egreso/egress/egress.page.html
@@ -31,6 +31,8 @@
       <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
       </ion-item>
   </ion-row>
-  <ion-button class="mt-4 ion-align-self-end" routerLink="/">Aceptar</ion-button>
+  <div style="text-align-last: right">
+        <ion-button class="mt-4" routerLink="/">Aceptar</ion-button>
+  </div>
 
 </ion-content>
