--- a/src/app/ingreso/dnisearch/dnisearch.page.html
+++ b/src/app/ingreso/dnisearch/dnisearch.page.html
@@ -30,11 +30,11 @@
             <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
                 <ion-select-option value="DNI">DNI</ion-select-option>
             </ion-select>
-        <ion-input type="text" placeholder="Ingrese DNI"></ion-input>
+        <ion-input type="text" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
         </ion-item>
     </ion-row>
     <div style="text-align-last: right">
-        <ion-button  class="mt-4 ion-align-self-end" routerLink="/destination">Aceptar</ion-button>
+        <ion-button  class="mt-4 ion-align-self-end" (click)="getpersona()">Aceptar</ion-button>
     </div>
 
 </ion-content>
