--- a/src/app/ingreso/newvehicle/newvehicle.page.html
+++ b/src/app/ingreso/newvehicle/newvehicle.page.html
@@ -51,6 +51,7 @@
           
     </ion-row> 
     <ion-button color="primary" routerLink="/authorization" routerLinkActive="router-link-active" >Aceptar</ion-button>
+    <ion-button color="primary" (click)="postVehiculo()" >Crear</ion-button>
           
     
 </ion-content>
