--- a/src/app/ingreso/transport/transport.page.html
+++ b/src/app/ingreso/transport/transport.page.html
@@ -20,7 +20,7 @@
   <!-- <ion-button (click)="siguiente(f)">Boton</ion-button> -->
 </form>
 <div>
-  <ion-button size="small" fill="clear" color="dark" strong="true">Agregar Vehiculo</ion-button>
+  <ion-button size="small" fill="clear" color="dark" strong="true" [routerLink]="['/newvehicle']">Agregar Vehiculo</ion-button>
 </div>
 <div style="text-align-last: right">
   <ion-button routerLink="/authorization">Aceptar</ion-button>
