--- a/src/app/security/login/login.page.html
+++ b/src/app/security/login/login.page.html
@@ -1,9 +1,8 @@
 <ion-header>
-        <ion-toolbar>
-          <ion-title text-capitalize>IngresAr</ion-title>
-         
-        </ion-toolbar>
-      </ion-header>
+    <ion-toolbar>
+        <ion-title class="ion-text-capitalize">IngresAr</ion-title>
+    </ion-toolbar>
+</ion-header>
 
 <ion-content>
     <img [src]="image" class="img-fluid mt-4" alt="Responsive image">
@@ -13,19 +12,18 @@
                 <div class="form-group">
                     <input [(ngModel)]="user.email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
                 </div>
-            </form>
-            <form>
+
                 <div class="form-group">
                     <input [(ngModel)]="user.password" type="password" name="password" class="form-control" aria-describedby="emailHelp" placeholder="Contraseña">
                 </div>
+                <p>Olvidaste tus datos de inicio de sesión?
+                    <b routerLink="/forgot">
+                        Obtene ayuda.
+                    </b>
+                </p>
+                <button type="submit" value="submit" class="btn btn-primary btn-lg btn-block" (click)="onLogin()" [disabled]="!(user.email && user.password)">Login</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/signin">Registrarse</button>
             </form>
-            <p>Olvidaste tus datos de inicio de sesión?
-                <b routerLink="/forgot">
-                              Obtene ayuda.
-                          </b>
-            </p>
-            <button type="button" class="btn btn-primary btn-lg btn-block" (click)="onLogin()" [disabled]="!(user.email && user.password)">Login</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" routerLink="/signin">Registrarse</button>
         </div>
     </div>
 </ion-content>
