--- a/src/app/ingreso/newvehicle/newvehicle.page.scss
+++ b/src/app/ingreso/newvehicle/newvehicle.page.scss
@@ -10,15 +10,15 @@
     ion-row {
       padding-left: 10px;
     }
-    ion-button{
-      padding-top: 20px;
-    }
-    .boton {
-     position: relative;
-      margin-left: 70%;
-      padding-top: 10%;
+    // ion-button{
+    //   padding-top: 20px;
+    // }
+    // .boton {
+    //  position: relative;
+    //   margin-left: 70%;
+    //   padding-top: 10%;
      
-    }
+    // }
 }
  @media (max-width: 1000px) {
     
@@ -32,8 +32,8 @@
   ion-row {
       padding-left: 10px;
     }
-    ion-button{
-      padding-top: 20px;
-    }
+    // ion-button{
+    //   padding-top: 20px;
+    // }
     
 }
