--- a/src/app/ingreso/newperson/newperson.page.html
+++ b/src/app/ingreso/newperson/newperson.page.html
@@ -4,7 +4,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref='/typeofingress'></ion-back-button>
         </ion-buttons>
-        <ion-title text-capitalize class="ion-text-center">Nueva Persona</ion-title>
+        <ion-title class="ion-text-capitalize ion-text-center">Nueva Persona</ion-title>
     </ion-toolbar>
 </ion-header>
 
