--- a/src/app/ingreso/transport/transport.page.html
+++ b/src/app/ingreso/transport/transport.page.html
@@ -1,33 +1,33 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-buttons slot="start">
-         <ion-back-button defaultHref='/typeofvisit'></ion-back-button>
-      </ion-buttons>
-      <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref='/typeofvisit'></ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-capitalize" class="ion-text-center">IngresAr</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content style="vertical-align: -webkit-baseline-middle">
-<form #f="ngForm">
-  <ion-list>
-    <ion-radio-group>
-      <ion-item *ngFor="let v of vehiculos, let i = index">
-        <ion-radio slot="start" name="patente" [value]="i" (ionSelect)="selected($event)"></ion-radio>
-        <ion-label>{{v.marca}} {{v.modelo}} {{v.patente}}</ion-label>
-      </ion-item>
-    </ion-radio-group>
-  </ion-list>
-  <!-- <ion-button (click)="siguiente(f)">Boton</ion-button> -->
-</form>
-<div>
-  <ion-button size="small" fill="clear" color="dark" strong="true" [routerLink]="['/newvehicle']">Agregar Vehiculo</ion-button>
-</div>
-<div style="text-align-last: right">
-  <ion-button routerLink="/authorization">Aceptar</ion-button>
-</div>
+    <form #f="ngForm">
+        <ion-list>
+            <ion-radio-group>
+                <ion-item *ngFor="let v of vehiculos, let i = index">
+                    <ion-radio slot="start" name="patente" [value]="i" (ionSelect)="selected($event)"></ion-radio>
+                    <ion-label>{{v.marca}} {{v.modelo}} {{v.patente}}</ion-label>
+                </ion-item>
+            </ion-radio-group>
+        </ion-list>
+        <!-- <ion-button (click)="siguiente(f)">Boton</ion-button> -->
+    </form>
+    <div>
+        <ion-button size="small" fill="clear" color="dark" strong="true" [routerLink]="['/newvehicle']">Agregar Vehiculo</ion-button>
+    </div>
+    <div style="text-align-last: right">
+        <ion-button routerLink="/authorization">Aceptar</ion-button>
+    </div>
 
 
-<!-- <form #f="ngForm">
+    <!-- <form #f="ngForm">
   <div class="form-check" *ngFor="let v of vehiculos, let i = index">
       <input class="form-check-input" type="radio" name="exampleRadios" id="i" value="" [(ngModel)]="index">
       <label class="form-check-label" for="i">
