--- a/src/app/ingreso/authorization/authorization.page.html
+++ b/src/app/ingreso/authorization/authorization.page.html
@@ -1,35 +1,35 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-           <ion-back-button defaultHref='/transport'></ion-back-button>
+            <ion-back-button defaultHref='/transport'></ion-back-button>
         </ion-buttons>
-        <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
+        <ion-title class="ion-text-capitalize ion-text-center">IngresAr</ion-title>
     </ion-toolbar>
-  </ion-header>
+</ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
 
-<ion-row>
-    <h3>¿Quien autoriza el ingreso?</h3>
-    <ion-list>
-        <ion-item>
-            <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="i">
+    <ion-row>
+        <h3>¿Quien autoriza el ingreso?</h3>
+        <ion-list>
+            <ion-item>
+                <ion-select class="select-people-size" placeholder="¿Quien autoriza?" okText="Seleccionar" [(ngModel)]="i">
                     <ion-select-option [value]=p.nombre *ngFor="let p of persona; let i = index"> {{p.nombre}}</ion-select-option>
-            </ion-select>
-        </ion-item>
-    </ion-list>
-</ion-row>
+                </ion-select>
+            </ion-item>
+        </ion-list>
+    </ion-row>
 
-<ion-row>
-    <h3 class="text-center">Acompañantes</h3>
-    <ion-item>
-        <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
-            <ion-select-option value="DNI">DNI</ion-select-option>
-        </ion-select>
-    <ion-input type="text" placeholder="Ingrese DNI"  [(ngModel)]="dni"></ion-input>
-    <ion-icon name="add" color="black"></ion-icon>
-    </ion-item>
-</ion-row>
+    <ion-row>
+        <h3 class="text-center">Acompañantes</h3>
+        <ion-item>
+            <ion-select class="select-DNI-size" placeholder="DNI" value="dni" okText="Seleccionar">DNI
+                <ion-select-option value="DNI">DNI</ion-select-option>
+            </ion-select>
+            <ion-input type="text" placeholder="Ingrese DNI" [(ngModel)]="dni"></ion-input>
+            <ion-icon name="add" color="black"></ion-icon>
+        </ion-item>
+    </ion-row>
 
 
 </ion-content>
