--- a/src/app/ingreso/typeofingress/typeofingress.page.html
+++ b/src/app/ingreso/typeofingress/typeofingress.page.html
@@ -1,13 +1,13 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-back-button defaultHref='/'></ion-back-button>
+            <ion-back-button defaultHref='/'></ion-back-button>
         </ion-buttons>
-        <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
+        <ion-title class="ion-text-capitalize" class="ion-text-center">IngresAr</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
 
     <ion-row class="row h-100 justify-content-center align-items-center">
         <ion-col>
