--- a/src/app/ingreso/typeofvisit/typeofvisit.page.html
+++ b/src/app/ingreso/typeofvisit/typeofvisit.page.html
@@ -1,13 +1,13 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-           <ion-back-button defaultHref='/dnisearch'></ion-back-button>
+            <ion-back-button defaultHref='/dnisearch'></ion-back-button>
         </ion-buttons>
-        <ion-title text-capitalize class="ion-text-center">IngresAr</ion-title>
+        <ion-title class="ion-text-capitalize" class="ion-text-center">IngresAr</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
     <div>
         <div class="text-center" style="margin-top: 20px;">
             <h2>¿Que viene a hacer?</h2>
@@ -33,7 +33,7 @@
                 </ion-button>
             </ion-col>
             <ion-col>
-                <ion-button expand= "full" size="large" routerLink="/servicio">
+                <ion-button expand="full" size="large" routerLink="/servicio">
                     <ion-label><i class="fas fa-tools"></i>Servicio</ion-label>
                 </ion-button>
             </ion-col>
