--- a/src/app/startmenu/startmenu.page.html
+++ b/src/app/startmenu/startmenu.page.html
@@ -1,16 +1,16 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title text-capitalize>IngresAr</ion-title>
+        <ion-title class="ion-class ion-text-capitalize ">IngresAr</ion-title>
         <ion-buttons slot="start">
             <ion-menu-button menu="primerMenu" disable="true"></ion-menu-button>
-          </ion-buttons>
-        
+        </ion-buttons>
+
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <div class="row mt-3 justify-content-center align-items-center">
-        <img [src]="image"  height="100px">
+        <img [src]="image" height="100px">
     </div>
     <div class="row h-75 justify-content-center align-items-center">
         <div expand="full">
