--- a/src/app/ingreso/newvehicle/newvehicle.page.html
+++ b/src/app/ingreso/newvehicle/newvehicle.page.html
@@ -9,11 +9,11 @@
 
 
 <ion-content>
-    <ion-button color="secondary" (click)="getMarca()">Marca</ion-button>
+    <!-- <ion-button color="secondary" (click)="getMarca()">Marca</ion-button>
     <ion-button color="tertiary" (click)="getModelo()">Modelo</ion-button>
     <ion-button color="success" (click)="getColor()">Color</ion-button>
-    <ion-button color="warning" (click)="getSeguro()">Seguro</ion-button>
-    <!-- <h2>Informacion del Vehiculo</h2>
+    <ion-button color="warning" (click)="getSeguro()">Seguro</ion-button> -->
+    <h2>Informacion del Vehiculo</h2>
     <h6>Dominio*</h6>
     <ion-row>
         <ion-item>
@@ -60,9 +60,9 @@
             <ion-datetime displayFormat="MM DD YY" placeholder="Select Date"></ion-datetime>
           </ion-item>
           
-    </ion-row>  -->
-    <!-- <ion-button color="primary" routerLink="/authorization" routerLinkActive="router-link-active" >Aceptar</ion-button>
-    <ion-button color="primary" (click)="postVehiculo()" >Crear</ion-button> -->
+    </ion-row> 
+    <ion-button color="primary" routerLink="/authorization" routerLinkActive="router-link-active" >Aceptar</ion-button>
+    <ion-button color="primary" (click)="postVehiculo()" >Crear</ion-button>
           
     
 </ion-content>
