--- a/src/app/ingreso/destination/destination.page.html
+++ b/src/app/ingreso/destination/destination.page.html
@@ -15,15 +15,17 @@
             <h2 class="text-center">¿Donde se dirige?</h2>
             <h3>Ingrese lote o apellido de la familia</h3>
             <ion-item>
-                <ion-select placeholder="Apellido" value="dni" okText="Seleccionar">Apellido
+                <ion-select placeholder="Apellido" okText="Seleccionar" [(ngModel)]="tipo">Apellido
                     <ion-select-option value="LOTE">LOTE</ion-select-option>
                     <ion-select-option value="APELLIDO">APELLIDO</ion-select-option>
                 </ion-select>
 
-                <ion-input type="text" placeholder="Ingrese lote o apellido"></ion-input>
+                <ion-input type="text" placeholder="Ingrese lote o apellido" [(ngModel)]="direccion"></ion-input>
             </ion-item>
             <div style="text-align-last: right">
                 <ion-button class="mt-4" routerLink="/typeofvisit">Siguiente</ion-button>
+                <ion-button color="light" (click)="imprimirTipo()">Imprimir Tipo</ion-button>
+                <ion-button color="tertiary" (click)="imprimirDireccion()">Imprimitor direccion</ion-button>
             </div>
         </div>
     </div>
